--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
     "gatsby-plugin-postcss": "^2.1.7",
     "gatsby-plugin-react-helmet": "^3.1.7",
     "gatsby-plugin-sharp": "^2.2.24",
+    "gatsby-remark-copy-linked-files": "^2.1.20",
+    "gatsby-remark-images": "^3.1.23",
+    "gatsby-remark-prismjs": "^3.3.14",
+    "gatsby-remark-responsive-iframe": "^2.2.17",
+    "gatsby-remark-smartypants": "^2.1.9",
     "gatsby-source-filesystem": "^2.1.24",
+    "gatsby-transformer-remark": "^2.6.24",
     "gatsby-transformer-sharp": "^2.2.15",
+    "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
