--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-helmet": "^5.2.1",
+    "shopify-liquid": "github:damianham/vscode-shopify-liquid",
     "tailwindcss": "^1.1.2"
   },
   "devDependencies": {
